5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3987/executions/1635_2445.log
== TEST (2019-04-15 12:55:26) 
-- CODE:
escala = float(input("escala e: "))
T = float(input("valor temperatura: "))
C = 5/9 * (T - 32)
F = 9/5 * (T + 32)
if (escala == F):
   print(round(F,2))
else: 
	print(round(C,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    escala = float(input())
ValueError: could not convert string to float: 'C'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:55:52) 
-- CODE:
escala = input("escala e: ")
T = float(input("valor temperatura: "))
C = 5/9 * (T - 32)
F = 9/5 * (T + 32)
if (escala == F):
   print(round(F,2))
else: 
	print(round(C,2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 12:56:01) 
-- CODE:
escala = input("escala e: ")
T = float(input("valor temperatura: "))
C = 5/9 * (T - 32)
F = 9/5 * (T + 32)
if (escala == F):
   print(round(F,2))
else: 
	print(round(C,2))
-- EXECUTION TIME:
0.218475
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:58:03) 
-- CODE:
escala = input("escala e: ")
T = int(input("valor temperatura: "))
C = 5/9 * (T - 32)
F = 9/5 * (T + 32)
if (escala == F):
   print(round(F,2))
else: 
	print(round(C,2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 12:58:52) 
-- CODE:
escala = input("escala e: ")
T = int(input("valor temperatura: "))
C = 5/9 * (T - 32)
F = 9/5 * (T + 32)
if (escala == F):
   print(round(F,2))
else: 
	print(round(C,2))
-- EXECUTION TIME:
0.124063
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:05:29) 
-- CODE:
escala = input("escala e: ")
T = int(input("valor temperatura: "))
C = 5/9 * (T - 32)
F = 9/5 * (T + 32)
if (escala == F):
   print(round(F,2))
else: 
	print(round(C,2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:05:37) 
-- CODE:
escala = input("escala e: ")
T = int(input("valor temperatura: "))
C = 5/9 * (T - 32)
F = 9/5 * (T + 32)
if (escala == F):
   print(round(F,2))
else: 
	print(round(C,2))
-- EXECUTION TIME:
0.142864
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:13:00) 
-- CODE:
escala = input("escala e: ")
if (escala == C):
	C = int(input("temperatura: "))
	F = (1.8 * C) + 32
   print(round(F,2))
else: 
	F = int(input("temperatura: "))
	C = 5/9 * (F - 32)
	print(round(C,2))





-- ERROR:
File "XXXX", line 5
    print(round(F,2))
                    ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:13:46) 
-- CODE:
escala = input("escala e: ")
if (escala == C):
	C = int(input("temperatura: "))
	F = (1.8 * C) + 32
   print(round(F,2))
else: 
	F = int(input("temperatura: "))
	C = 5/9 * (F - 32)
	print(round(C,2))





-- ERROR:
File "XXXX", line 5
    print(round(F,2))
                    ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:14:45) 
-- CODE:
escala = input("escala e: ")
if (escala == C):
	C = int(input("temperatura: "))
	F = (1.8 * C) + 32
   print(round(F,2))
else: 
	F = int(input("temperatura: "))
	C = 5/9 * (F - 32)
	print(round(C,2))





-- ERROR:
File "XXXX", line 5
    print(round(F,2))
                    ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:15:27) 
-- CODE:
escala = input("escala e: ")
if (escala == C):
	C = (int(input("temperatura: ")))
	F = (1.8 * C) + 32
   print(round(F,2))
else: 
	F = (int(input("temperatura: ")))
	C = 5/9 * (F - 32)
	print(round(C,2))





-- ERROR:
File "XXXX", line 5
    print(round(F,2))
                    ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:16:03) 
-- CODE:
escala = input("escala e: ")
if (escala == C):
	c = (int(input("temperatura: ")))
	f = (1.8 * c) + 32
   print(round(f,2))
else: 
	f = (int(input("temperatura: ")))
	c = 5/9 * (f - 32)
	print(round(C,2))





-- ERROR:
File "XXXX", line 5
    print(round(f,2))
                    ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:30:17) 
-- CODE:
T = input("C ou F:")
V = float(input("valor da T:"))
C = (5 * V - 5 * 32)/9
F = ((9 * V/5)+32)
if (T == "C"):
	print(round(F.2))
else:
	print(round(C,2))




-- ERROR:
File "XXXX", line 6
    print(round(F.2))
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:30:37) 
-- CODE:
T = input("C ou F:")
V = float(input("valor da T:"))
C = (5 * V - 5 * 32)/9
F = ((9 * V/5)+32)
if (T == "C"):
	print(round(F,2))
else:
	print(round(C,24))




-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:30:55) 
-- CODE:
T = input("C ou F:")
V = float(input("valor da T:"))
C = (5 * V - 5 * 32)/9
F = ((9 * V/5)+32)
if (T == "C"):
	print(round(F,2))
else:
	print(round(C,2))




-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:31:01) 
-- CODE:
T = input("C ou F:")
V = float(input("valor da T:"))
C = (5 * V - 5 * 32)/9
F = ((9 * V/5)+32)
if (T == "C"):
	print(round(F,2))
else:
	print(round(C,2))




-- EXECUTION TIME:
0.148894
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
